compiler/testData/diagnostics/tests/incompleteCode/diagnosticWithSyntaxError/incompleteWhen.kt
fun test(a: Any) {
    when (<!UNUSED_EXPRESSION!>a<!>)<!SYNTAX!><!>
}